// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailIntegrationList/> render() should render the page when there are no integrations 1`] = `
<div>
  <div
    class="w-100"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            Email
          </li>
        </ol>
      </nav>
      <div>
        <button
          aria-disabled="false"
          class="wrapper fill primary medium"
          type="submit"
        >
          Add email address
        </button>
      </div>
    </div>
    <div
      class="pageContainer pb0 container-fluid"
      data-candu-id="integration-list-top"
    >
      <div
        class="mb-3"
      >
        <span>
          Connect your support email addresses and respond to your customers from Gorgias.
        </span>
      </div>
      <div
        class="mt-3"
      >
        You have no integration of this type at the moment.
      </div>
    </div>
    <div
      class="container-fluid"
      data-candu-id="integration-list-bottom"
    />
  </div>
</div>
`;

exports[`<EmailIntegrationList/> render() should render the page without warning when the email is verified 1`] = `
<div>
  <div
    class="w-100"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            Email
          </li>
        </ol>
      </nav>
      <div>
        <button
          aria-disabled="false"
          class="wrapper fill primary medium"
          type="submit"
        >
          Add email address
        </button>
      </div>
    </div>
    <div
      class="pageContainer pb0 container-fluid"
      data-candu-id="integration-list-top"
    >
      <div
        class="mb-3"
      >
        <span>
          Connect your support email addresses and respond to your customers from Gorgias.
        </span>
      </div>
    </div>
    <table
      class="table-integrations mt-3 table table-hover"
    >
      <tbody>
        <tr>
          <td
            class="smallest align-middle"
          >
            <i
              class="icon material-icons align-bottom"
            >
              email
            </i>
          </td>
          <td
            class="link-full-td"
          >
            <a
              data-testid="integration-link"
              to="/app/settings/channels/email/1"
            >
              <div>
                <b
                  class="mr-2"
                >
                  My Email Integration 1
                </b>
                <span
                  class="text-faded"
                >
                  email@gorgias-test.com
                </span>
              </div>
            </a>
          </td>
          <td
            class="smallest align-middle text-right p-0"
          >
            <div />
          </td>
          <td
            class="smallest align-middle"
          >
            <a
              to="/app/settings/channels/email/1"
            >
              <i
                class="material-icons md-2 align-middle icon-go-forward"
              >
                keyboard_arrow_right
              </i>
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="container-fluid"
      data-candu-id="integration-list-bottom"
    />
  </div>
</div>
`;
